# assembler0-simulator

./: .gitignore  README.md  pyproject.toml
src/assembler0_simulator/backend/: arm_configs.py  interface.py  main.py
src/assembler0_simulator/frontend/: index.html  package-lock.json  package.json  vite.config.ts
src/assembler0_simulator/frontend/src/: App.tsx  main.tsx
src/assembler0_simulator/frontend/src/components/: ArmSelector.tsx  CameraControls.tsx  JointControls.tsx  VideoViewer.tsx
src/assembler0_simulator/frontend/src/components/Gamepad/: Gamepad.tsx  GamepadStatus.tsx  GamepadVisualizer.tsx
src/assembler0_simulator/frontend/src/constants/: theme.ts
src/assembler0_simulator/frontend/src/hooks/: useGamepad.ts  useGamepadControl.ts
src/assembler0_simulator/frontend/src/services/: api.ts  gamepadService.ts  websocket.ts
src/assembler0_simulator/frontend/src/types/: gamepad.ts  index.ts
src/assembler0_simulator/low_cost_robot/: scene.xml
src/assembler0_simulator/low_cost_robot_6dof_screwdriver/: low_cost_robot.xml  low_cost_robot_screwdriver.urdf  scene.xml
src/assembler0_simulator/low_cost_robot_6dof_screwdriver/assets/: XL330_motor.stl  screwdriver_bit.stl
