[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "assembler0-simulator"
version = "0.1.0"
description = "MuJoCo simulator for assembler0 robot"
authors = [{name = "Jack Vial", email = "vialjack@gmail.com"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "mujoco>=3.0.0",
    "numpy",
    "fastapi",
    "uvicorn[standard]",
    "websockets",
    "opencv-python==4.12.0.88",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "ruff",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"assembler0_simulator" = [
    "low_cost_robot/assets/*.stl",
    "low_cost_robot/*.urdf",
    "low_cost_robot/*.xml",
]
